# tssj

scheme_config/: conv_UTF8.py  t_action.txt  t_active.txt  t_active_reward.txt  t_baowu.txt  t_baowu_enhance.txt  t_baowu_jl.txt  t_baowu_sx.txt  t_bingyuan_chenghao.txt  t_bingyuan_mubiao.txt  t_bingyuan_reward.txt  t_bingyuan_shop.txt  t_boss_active.txt  t_boss_dw.txt  t_boss_hp.txt  t_boss_reward.txt  t_boss_shop.txt  t_chenghao.txt  t_chongwu.txt  t_chongwu_jinjie.txt  t_chongwu_jinjieitem.txt  t_chongwu_shengxing.txt  t_chongwu_shop.txt  t_chongwu_skill.txt  t_chongwu_target.txt  t_chongzhifanpai.txt  t_chongzhifanpai_shop.txt  t_chouka.txt  t_comeback.txt  t_const.txt  t_danmu.txt  t_dress.txt  t_dress_target.txt  t_dress_unlock.txt  t_duixing.txt  t_duixing_skill.txt  t_duixing_up.txt  t_equip.txt  t_equip_enhance.txt  t_equip_gaizao.txt  (+119 more)
soft/client/Assets/: GameLoad.unity  effect_edit.unity  effect_sencen.unity  effetc.unity  face.unity  game_main.unity  game_start.unity  mm_test.unity  mm_test1.unity
soft/client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
soft/common/: create_db.bat  opcodes_client.bat  proto2sql.bat  protoc_cpp.bat  protoc_python.bat
soft/common/etools/: opcodes_cs.py  opcodes_py.py
soft/common/protocol/: acc.sproto  boss.eproto  equip.eproto  global.eproto  gtool.eproto  guild.eproto  guild_arrange.eproto  guild_box.eproto  guild_event.eproto  guild_fight.eproto  guild_list.eproto  guild_member.eproto  guild_message.eproto  guild_mission.eproto  guild_red.eproto  huodong.eproto  huodong_entry.eproto  huodong_player.eproto  lottery_list.eproto  msg_huodong.proto  msg_player.proto  msg_self.proto  msg_team.proto  other.proto  pet.eproto  player.eproto  post.eproto  protoc_csharp.bat  rank.eproto  recharge_heitao.sproto  rob_t.eproto  role.eproto  rpc.proto  social.eproto  sport.eproto  sport_list.eproto  treasure.eproto  treasure_list.eproto  treasure_report.eproto
soft/common/protocpp/: acc.sproto.pb.cc  acc.sproto.pb.h  boss.eproto.pb.cc  boss.eproto.pb.h  equip.eproto.pb.cc  equip.eproto.pb.h  global.eproto.pb.cc  global.eproto.pb.h  gtool.eproto.pb.cc  gtool.eproto.pb.h  guild.eproto.pb.cc  guild.eproto.pb.h  guild_arrange.eproto.pb.cc  guild_arrange.eproto.pb.h  guild_box.eproto.pb.cc  guild_box.eproto.pb.h  guild_event.eproto.pb.cc  guild_event.eproto.pb.h  guild_fight.eproto.pb.cc  guild_fight.eproto.pb.h  guild_list.eproto.pb.cc  guild_list.eproto.pb.h  guild_member.eproto.pb.cc  guild_member.eproto.pb.h  guild_message.eproto.pb.cc  guild_message.eproto.pb.h  guild_mission.eproto.pb.cc  guild_mission.eproto.pb.h  guild_red.eproto.pb.cc  guild_red.eproto.pb.h  huodong.eproto.pb.cc  huodong.eproto.pb.h  huodong_entry.eproto.pb.cc  huodong_entry.eproto.pb.h  huodong_player.eproto.pb.cc  huodong_player.eproto.pb.h  lottery_list.eproto.pb.cc  lottery_list.eproto.pb.h  msg_huodong.pb.cc  msg_huodong.pb.h  (+33 more)
soft/public/main/: cp.sh  deploy.sh  game.json  gate1.py  gate2.py  gate3.py  gate4.py  libao.py  login.py  main.bat  makeex.sh  remote.py  replace.py  server.json  setff.sh  start.sh  stop.sh  stopex.sh  updatebak.sh
soft/public/pvp/: Makefile.am  configure.ac  cp.sh  gate1.py  gate2.py  gate3.py  gate4.py  make.sh  server.json  setff.sh  start.sh  stop.sh
soft/public/system/: README.md  build_libao_server.sh  build_log_server.sh  build_server.sh  client.conf  pack.bat  readme1.0.md  start_libao.sh  start_server.sh  svc.conf  system.bat
soft/public/team/: Makefile.am  configure.ac  cp.sh  game.json  gate1.py  gate2.py  gate3.py  gate4.py  server.json  start.sh  stop.sh
soft/server/: Makefile.am  configure.ac  cppnet.sln
soft/server/conf/: game.json  server.json
soft/server/config/: t_action.txt  t_active.txt  t_baowu.txt  t_baowu_jl.txt  t_bingyuan_chenghao.txt  t_bingyuan_mubiao.txt  t_bingyuan_reward.txt  t_bingyuan_shop.txt  t_boss_active.txt  t_boss_dw.txt  t_boss_reward.txt  t_boss_shop.txt  t_chongwu.txt  t_chongwu_jinjie.txt  t_chongwu_skill.txt  t_chongwu_target.txt  t_chongzhifanpai.txt  t_daily_sign.txt  t_danmu.txt  t_dress.txt  t_dress_target.txt  t_duixing.txt  t_duixing_skill.txt  t_duixing_up.txt  t_equip_enhance.txt  t_equip_gaizao.txt  t_equip_skill.txt  t_equip_tz.txt  t_exp.txt  t_face.txt  t_first_recharge.txt  t_guanghuan_skill.txt  t_guild_icon.txt  t_guild_keji.txt  t_huodong.txt  (+53 more)
soft/server/src/chat/: Makefile.am  chat.cpp  chat_manager.cpp  chat_manager.h
soft/server/src/gs/: Makefile.am  boss_config.cpp  boss_config.h  boss_manager.cpp  boss_manager.h  equip_config.h  equip_manager.cpp  equip_manager.h  equip_operation.cpp  global_pool.cpp  global_pool.h  gs.cpp  gs_manager.cpp  gs_manager.h  gs_message.cpp  gs_message.h  guild_config.h  guild_manager.cpp  guild_manager.h  guild_operation.cpp  guild_operation.h  guild_pool.cpp  guild_pool.h  huodong_config.cpp  huodong_config.h  huodong_manager.cpp  huodong_manager.h  huodong_operation.cpp  huodong_operation.h  huodong_pool.cpp  huodong_pool.h  item_manager.cpp  item_manager.h  item_operation.cpp  mission_config.cpp  mission_manager.cpp  mission_manager.h  mission_pool.cpp  mission_pool.h  player_config.h  (+63 more)
soft/server/src/libgame/: Makefile.am  channel.cpp  channel.h  dfa_algorith.h  dhc.cpp  dhc.h  env.cpp  env.h  game.cpp  game.h  game_interface.h  game_service.cpp  game_service.h  gameinc.h  gtool.cpp  gtool.h  log.cpp  log.h  multiquery.cpp  multiquery.h  name.cpp  name.h  opcodes.h  packet.cpp  packet.h  pool.cpp  pool.h  protos.h  rpc.pb.cc  rpc.pb.h  rpc_client.cpp  rpc_server.cpp  rpc_server.h  rpc_service.cpp  rpc_service.h  scheme.cpp  scheme.h  sig.h  sqlquery.cpp  sqlquery.h  (+5 more)
soft/server/src/master/: Makefile.am  master.cpp
soft/server/src/team/: Makefile.am  client.cpp  client.h  copy.bat  equip_config.cpp  item_config.cpp  item_operation.h  main.cpp  mission_operation.cpp  player_config.cpp  pool.cpp  pool.h  role_config.cpp  role_operation.h  single.cpp  single.h  team.cpp  team.h  team_config.cpp  team_config.h  team_service.cpp  team_service.h  treasure_config.cpp
(+11009 files in other folders)
