#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([tsjh], [0.1], [rocketxyfb@163.com])
AM_INIT_AUTOMAKE(tsjh, 0.1)
AC_CONFIG_SRCDIR([src/team/main.cpp])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([src/libgame/Makefile src/team/Makefile]) 



# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
