noinst_LIBRARIES = libgame.a
libgame_a_SOURCES =     \
    channel.cpp         \
    dbc.cpp             \
    dfa_algorith.cpp    \
    dhc.cpp             \
    log.cpp             \
    env.cpp             \
    game.cpp            \
    game_service.cpp    \
    gtool.cpp           \
    multiquery.cpp      \
    name.cpp            \
    pool.cpp            \
    packet.cpp          \
    rpc.pb.cc           \
    rpc_client.cpp      \
    rpc_server.cpp      \
    rpc_service.cpp     \
    scheme.cpp          \
    sig.cpp             \
    sqlquery.cpp        \
    tcp_handler.cpp     \
    tcp_service.cpp     \
    timer.cpp           \
    utils.cpp           \
    windumper.cpp       \
    ../../../common/protocpp/acc.sproto.pb.cc          \
    ../../../common/protocpp/equip.eproto.pb.cc        \
    ../../../common/protocpp/gtool.eproto.pb.cc        \
    ../../../common/protocpp/msg_player.pb.cc          \
    ../../../common/protocpp/msg_huodong.pb.cc         \
    ../../../common/protocpp/msg_self.pb.cc            \
    ../../../common/protocpp/other.pb.cc               \
    ../../../common/protocpp/player.eproto.pb.cc       \
    ../../../common/protocpp/post.eproto.pb.cc         \
    ../../../common/protocpp/role.eproto.pb.cc         \
    ../../../common/protocpp/sport.eproto.pb.cc        \
    ../../../common/protocpp/sport_list.eproto.pb.cc   \
    ../../../common/protocpp/guild.eproto.pb.cc        \
    ../../../common/protocpp/guild_list.eproto.pb.cc   \
    ../../../common/protocpp/guild_member.eproto.pb.cc \
    ../../../common/protocpp/guild_event.eproto.pb.cc  \
    ../../../common/protocpp/guild_mission.eproto.pb.cc \
    ../../../common/protocpp/guild_message.eproto.pb.cc \
    ../../../common/protocpp/boss.eproto.pb.cc         \
    ../../../common/protocpp/social.eproto.pb.cc       \
    ../../../common/protocpp/rank.eproto.pb.cc         \
    ../../../common/protocpp/global.eproto.pb.cc       \
    ../../../common/protocpp/treasure.eproto.pb.cc     \
    ../../../common/protocpp/treasure_report.eproto.pb.cc \
    ../../../common/protocpp/treasure_list.eproto.pb.cc \
    ../../../common/protocpp/huodong.eproto.pb.cc      \
    ../../../common/protocpp/huodong_entry.eproto.pb.cc \
    ../../../common/protocpp/lottery_list.eproto.pb.cc \
    ../../../common/protocpp/msg_team.pb.cc            \
    ../../../common/protocpp/huodong_player.eproto.pb.cc \
    ../../../common/protocpp/guild_red.eproto.pb.cc     \
    ../../../common/protocpp/guild_box.eproto.pb.cc     \
    ../../../common/protocpp/pet.eproto.pb.cc           \
    ../../../common/protocpp/guild_arrange.eproto.pb.cc  \
    ../../../common/protocpp/guild_fight.eproto.pb.cc   \
    ../../../common/protocpp/recharge_heitao.sproto.pb.cc

INCLUDES = -I/usr/local/include -I/usr/local/include/mysql++ -I/usr/include/mysql

